Setup Native Image (#2)
* Test build native image

* Remove application-local.yml

* Remove application-local.yml

* Rename env log4j2

* Set optional configserver

* Fix selenium resources loader

* Update workflow