@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.5.3</version>
+        <version>3.5.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.starline</groupId>
@@ -35,6 +35,7 @@
         <spring-aspect.version>7.0.0-M6</spring-aspect.version>
         <lmax-disruptor.version>4.0.0</lmax-disruptor.version>
         <spring-cloud.version>2025.0.0</spring-cloud.version>
+        <native.maven.plugin.version>0.11.0</native.maven.plugin.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -79,6 +80,30 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j2-impl -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j2-impl</artifactId>
+            <version>2.25.1</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.25.1</version>
+        </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-jul -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-jul</artifactId>
+            <version>2.25.1</version>
+            <scope>runtime</scope>
         </dependency>
 
         <dependency>
@@ -199,5 +224,82 @@
             </plugin>
         </plugins>
     </build>
+    <profiles>
+        <profile>
+            <id>native</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.graalvm.buildtools</groupId>
+                        <artifactId>native-maven-plugin</artifactId>
+                        <version>${native.maven.plugin.version}</version>
+                        <extensions>true</extensions>
+                        <executions>
+                            <execution>
+                                <id>build-native</id>
+                                <goals>
+                                    <goal>compile-no-fork</goal>
+                                </goals>
+                                <phase>package</phase>
+                            </execution>
+                            <execution>
+                                <id>test-native</id>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <phase>test</phase>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <metadataRepository>
+                                <enabled>true</enabled>
+                            </metadataRepository>
+                            <agent>
+                                <enabled>true</enabled>
+                            </agent>
+                            <mainClass>com.starline.scrapper.ScrapperServiceApplication</mainClass>
+                            <buildArgs>
+                                <arg>--verbose</arg>
+                                <arg>--enable-url-protocols=jar,https,http</arg>
+                                <arg>--enable-native-access=ALL-UNNAMED</arg>
+                                <arg>-Ob</arg>
+                                <arg>--no-fallback</arg>
+                                <arg>-J-XX:MaxRAMPercentage=98.0</arg>
+                                <arg>-H:+ReportExceptionStackTraces</arg>
+                                <arg>-H:IncludeResources=log4j2.component.properties</arg>
+                                <arg>-H:IncludeResources=application.yml</arg>
+                                <arg>-H:IncludeResources=log4j2.xml</arg>
+                                <arg>-H:IncludeResources=log4j2-prod.xml</arg>
+                                <arg>-H:IncludeResources=log4j2-local.xml</arg>
+                                <arg>-H:IncludeResources=log4j2-spring.xml</arg>
+                                <arg>-H:IncludeResources=org/openqa/selenium/remote/.*</arg>
+                                <arg>-H:IncludeResources=org/openqa/selenium/.*</arg>
+                                <!-- Include other common Selenium resources -->
+                                <arg>-H:IncludeResources=org/openqa/selenium/support/.*</arg>
+                                <!-- If you need Chrome/Firefox driver resources -->
+                                <arg>-H:IncludeResources=.*chromedriver.*</arg>
+                                <arg>-H:IncludeResources=.*geckodriver.*</arg>
+                                <arg>-H:+GenerateBuildArtifactsFile</arg>
+                                <arg>-march=compatibility</arg>
+                                <arg>-H:+AddAllCharsets</arg>
+                                <arg>--add-opens java.base/java.lang=ALL-UNNAMED</arg>
+                                <arg>--add-opens java.base/java.util=ALL-UNNAMED</arg>
+                                <arg>--add-opens java.base/java.time=ALL-UNNAMED</arg>
+                                <arg>--add-opens java.base/java.io=ALL-UNNAMED</arg>
+                                <arg>-Duser.timezone=GMT+7</arg>
+                            </buildArgs>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                        <configuration>
+                            <classifier>exec</classifier>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
